# crankpy

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PYSCRIPT_CLI_COMPATIBILITY.md  PYSCRIPT_MICROPYTHON_BUGS.md  README.md  __init__.py  async.py  context_debug.html  crank.py  debug_renderer.html  debug_wrapper_flow.html  dom.py  examples.py  html.py  introducing-crank-py.md  package.json  pyproject.toml  pyscript_example.html  test_actual_context.html  test_async_micropython.html  test_comparison.html  test_complete_fix.html  test_component_debug.html  test_component_wrapper.html  test_context_debug.html  test_context_direct.html  test_context_fix.html  test_context_init_debug.html  test_context_iteration.html  test_context_real_debug.html  test_crank_direct.html  test_crank_micropython.html  test_debug_component.html  test_debug_wrapper.html  test_define_property.html  test_direct_access.html  test_direct_approach.html  test_end_to_end_proof.html  (+45 more)
.github/workflows/: publish.yml  test.yml
bug_reports/: MICROPYTHON_BUGS_REPORT.md  micropython_dict_bug.html  micropython_dir_bug.html  micropython_symbol_iterator_bug.html  working_workarounds.html
crank/: __init__.py  async_.py  dom.py  html.py  typing_stub.py
examples/: README.md  animated_letters.html  animated_letters.py  counter.html  counter.py  greeting.html  greeting.py  micropython_crank_test.html  micropython_ffi_check.html  micropython_ffi_only.html  micropython_hello.html  micropython_intercept.html  micropython_js_objects.html  micropython_magic_inline.html  micropython_step1.html  micropython_verify.html  micropython_working.html  props_example.py  pyodide_test.html  pyscript_2025_test.html  runtime_detection.html  showcase.py  test_micropython_magic.html  test_micropython_simple.html  todomvc.py  wizard.py
test_pyscript_cli/: index.html  main.py  pyscript.toml
tests/: README.md  __main__.py  conftest.py  mock_setup.py  test_async.py  test_async_components.py  test_async_micropython.py  test_basic.py  test_browser.py  test_components.py  test_crank.py  test_crank_functionality.py  test_cross_runtime.py  test_dual_runtime.py  test_dummy_failures.py  test_dynamic_tags.py  test_error_handling.py  test_errors.py  test_events.py  test_generator_advanced.py  test_generators.py  test_hydration.py  test_hyperscript.py  test_implementation_agnostic.py  test_integration.py  test_lifecycle.py  test_magic_syntax.py  test_micropython_compatibility.py  test_micropython_inspect.py  test_package_integration.py  test_portals.py  test_refs.py  test_refs_keys_copy.py  test_simple_micropython.py  test_special_elements.py  test_suspense.py  test_suspense_async.py  test_suspense_enhanced.py  test_svg_rendering.py  test_types.py  (+1 more)
tests/browser/: test_components.py  test_hyperscript.py
tests/test_pages/: complex_props.html  counter.html  counter_micropython.html  data_conversion.html  debug_micropython_runtime.html  error_handling.html  event_handlers.html  event_handlers_micropython.html  hello_world.html  hello_world_micropython.html  hello_world_wheel.html  invalid_props.html  lifecycle.html  nested_elements.html  nested_elements_micropython.html  package_imports_test.html  props_test.html  test_async_function_components.html  test_async_micropython.html  test_browser_pytest.html  test_browser_pytest_mpy.html  test_comparison.html  test_crank_micropython.html  test_micropython_inspect.html  test_typing_micropython.html  timer.html  timer_micropython.html  todo_app.html  todo_app_micropython.html
